endpoint create estates
